Fixed spacing. Addapted icon placement to new layout.

--- a/app/assets/stylesheets/listing.css.scss
+++ b/app/assets/stylesheets/listing.css.scss
@@ -29,7 +29,7 @@
     font-weight: bold;
     color: #5f6264;
 
-    .icon {
+    .spacing {
       padding-left: 10px;
       padding-right: 5px;
     }
